--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,47 @@
     {% load static %}
 
     <link rel="stylesheet" href="{% static 'global.css' %}">
+    <script src="{% static 'js/tailwind3.4.1.js' %}"></script>
     <title>Enku Docs {% block title %}{% endblock %}</title>
 </head>
 <body>
 
-    {% block content %}
-    {% endblock %}
+    <nav>
+        <div class="title">Enku Docs.</div>
+
+        <div class="nav-links">
+
+            {% if user.is_authenticated %}
+                <div class="user-menu">{{user.username}}</div>
+            {% else %}
+                <div class="user-menu login"><a href="{% url 'login' %}">Login</a></div>
+            {% endif %}
+        </div>
+        
+    </nav>
+
+    <div class="content">
+        {% block content %}
+        {% endblock %}
+    </div>
+    
     
 </body>
+
+<style>
+    nav{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 1rem;
+    }
+    .title{
+        font-family: 'OpenSans-Bold';
+        font-size: 44px;
+        font-weight: bold;
+    }
+</style>
+
 </html> 
