--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends 'base.html' %}
 
-    {% load i18n %}
+{% load i18n %}
 
-    <title>Enku Docs</title>
-</head>
-<body>
+{% block content %}
+<div>
 
     {% get_current_language as LANGUAGE_CODE %}
     <!-- Current language: {{ LANGUAGE_CODE }} -->
@@ -40,5 +35,6 @@
         <input type="submit" value="Go">
     </form>
 
-</body>
-</html>
+</div>
+
+{% endblock %}
